--- a/angular/cd/ngDoCheck.mdx
+++ b/angular/cd/ngDoCheck.mdx
@@ -26,7 +26,7 @@ Angular ngDoCheck lifecycle hook enables custom change detection when default me
 
 ## Important Classes/Interfaces
 
-- **DoCheck**: Interface { ngDoCheck(): void } - lifecycle contract
+- **DoCheck**: Interface `{ ngDoCheck(): void }` - lifecycle contract
 - **KeyValueDiffer**: Tracks object mutations (added/removed/changed keys)
 - **IterableDiffer**: Tracks array ops (add/remove/move/identity)
 - **ChangeDetectorRef**: detach/reattach/markForCheck/detectChanges/checkNoChanges[2]
