--- a/angular/component/overview.mdx
+++ b/angular/component/overview.mdx
@@ -23,8 +23,8 @@ Angular flexible components use `ng-content` for simple content projection and `
 
 ## Important Classes/Interfaces
 
-- **TemplateRef<any>**: Holds unreleased content for dynamic outlet
-- **@ContentChild(TemplateRef)**: Queries projected templates (multi: true for slots)
+- **`TemplateRef<any>`**: Holds unreleased content for dynamic outlet
+- **`@ContentChild(TemplateRef)`**: Queries projected templates (multi: true for slots)
 - **ngTemplateOutlet**: Renders TemplateRef dynamically 
 
 ## Design Patterns
