--- a/angular/forms/control-value-accessor.mdx
+++ b/angular/forms/control-value-accessor.mdx
@@ -54,7 +54,7 @@ Angular ControlValueAccessor (CVA) bridges FormControl with custom/native DOM el
   Checkbox → Number → Radio → Range → Select → Default (input/textarea)
   ```
 - **setDisabledState(isDisabled)**: FormControl disabled → widget
-- **Testing**: TestBed.configureTestingModule({providers: [NG_VALUE_ACCESSOR]})
+- **Testing**: TestBed.configureTestingModule(`{providers: [NG_VALUE_ACCESSOR]}`)
 - **Standalone**: providers: [...] replaces NgModule registration
 
 ## Big Tech References
