--- a/angular/lifecycle/constructor-ngonint.mdx
+++ b/angular/lifecycle/constructor-ngonint.mdx
@@ -19,7 +19,7 @@ Angular constructor executes during DI resolution phase (pre-DOM/@Input), solely
 ## Important Classes/Interfaces
 
 - **OnInit**: `{ ngOnInit(): void }` lifecycle contract
-- **NodeFlags.OnInit**: Compiler bitflag (1<<16) detects implementation
+- **NodeFlags.OnInit**: Compiler bitflag (`1 << 16`) detects implementation
 - **Injector**: Constructor DI context only
 
 ## Design Patterns
