--- a/angular/lifecycle/hooks.mdx
+++ b/angular/lifecycle/hooks.mdx
@@ -19,7 +19,7 @@ ngOnDestroy
 
 - **OnChanges/OnInit/DoCheck/AfterContentInit/ViewInit/AfterViewChecked/OnDestroy**: Lifecycle interfaces
 - **SimpleChanges**: ngOnChanges param (current/previous/firstChange)
-- **NodeFlags**: Compiler flags detect hook presence (e.g., OnInit=1<<16)
+- **NodeFlags**: Compiler flags detect hook presence (e.g., OnInit=`1 << 16`)
 - **@ContentChild/@ViewChild**: Content/view queries ready at respective hooks
 
 ## Design Patterns
