--- a/angular/signals/component-communication.mdx
+++ b/angular/signals/component-communication.mdx
@@ -50,11 +50,11 @@ inputs = viewChildren<HTMLInputElement>('input');
 
 ## Important Classes/Interfaces
 
-- **input<T>()**: → InputSignal<T>
-- **model<T>()**: → ModelSignal<T> (2-way)
-- **output<T>()**: → OutputEmitterRef<T>
-- **contentChildren<T>()/viewChildren<T>()**: → Signal<T[]>
-- **contentChild<T>()/viewChild<T>()**: → Signal<T|undefined>
+- `input<T>()`: → `InputSignal<T>`
+- `model<T>()`: → `ModelSignal<T>` (2-way)
+- `output<T>()`: → `OutputEmitterRef<T>`
+- **`contentChildren<T>()/viewChildren<T>()`**: → `Signal<T[]>`
+- **`contentChild<T>()/viewChild<T>()`**: → `Signal<T|undefined>`
 
 ## Design Patterns
 
