--- a/angular/signals/effective-use.mdx
+++ b/angular/signals/effective-use.mdx
@@ -52,7 +52,7 @@ loadRatings() {
 
 - **toObservable(signal)**: Signal → Observable
 - **toSignal(obs$, {initialValue})**: Observable → Signal
-- **rxMethod<T>()**: NGRX reactive method (auto-subscribe)
+- **rxMethod&lt;T&gt;()**: NGRX reactive method (auto-subscribe)
 - **tapResponse()**: NGRX pipe (next/error/finalize)
 
 ## Design Patterns
