--- a/angular/signals/rules.mdx
+++ b/angular/signals/rules.mdx
@@ -58,7 +58,7 @@ desserts = toSignal(desserts$);
 
 ## Important Classes/Interfaces
 
-- **computed<T>()**: Derived signals (memoized, reactive deps)
+- **`computed<T>()`**: Derived signals (memoized, reactive deps)
 - **effect(fn, {allowSignalWrites})**: Side-effects (logging/UI)
 - **toObservable(signal)**: Signal → Observable (RxJS interop)
 - **NGRX Signal Store**: Actions → Effects → Signal state slices
