--- a/angular/state/ngrx.mdx
+++ b/angular/state/ngrx.mdx
@@ -89,7 +89,7 @@ this.someStream$.pipe(
 ## Key Classes/Interfaces
 - **Store.select(selectViewModel)**: Composed selector for container view state[1]
 - **RouterStore.selectors**: `selectRouterStateData`, `selectRouteParams`, `selectQueryParams`[1]
-- **Effect<T>()**: Lightweight orchestration effects[1]
+- **Effect&lt;T&gt;()**: Lightweight orchestration effects[1]
 - **Actions$**: Stream of dispatched actions[1]
 
 ## Design Patterns & Best Practices Summary
