--- a/frontend/performance/core-web-vitals.mdx
+++ b/frontend/performance/core-web-vitals.mdx
@@ -40,7 +40,7 @@ Core Web Vitals is Google’s focused set of **user‑centric performance metric
 
 ### Definition & Targets
 
-- CLS = **largest session window** of summed layout shift scores (bursts of shifts <1s apart, max 5s window).[5]
+- CLS = **largest session window** of summed layout shift scores (bursts of shifts &ltg;1s apart, max 5s window).[5]
 - “Good” CLS: **≤ 0.1** at 75th percentile.[5]
 
 ### Layout shift score
