--- a/microservices/service-catalog.mdx
+++ b/microservices/service-catalog.mdx
@@ -45,7 +45,7 @@ A: A set of rules (e.g., “has SLO,” “has owner,” “has runbook,” “u
 A: Architecture teams define standards; catalog scorecards and reports highlight non-compliant or high-risk services, enabling targeted remediation instead of mass emails.[4][1]
 
 **Q8: When is a catalog overkill?**  
-A: Very small orgs with <10 services can survive on wikis/spreadsheets; beyond that, duplication, ownership confusion, and incident MTTR usually justify a catalog.[9][6]
+A: Very small orgs with &ltg;10 services can survive on wikis/spreadsheets; beyond that, duplication, ownership confusion, and incident MTTR usually justify a catalog.[9][6]
 
 **Q9: How do internal developer portals relate to catalogs?**  
 A: The catalog is the core data model for services; the IDP adds UX for scaffolding new services, running self-service ops (create DB, request domain, run checks), and surfacing scorecards.[3][5][9]
