--- a/observability/observability-monitoring.mdx
+++ b/observability/observability-monitoring.mdx
@@ -30,7 +30,7 @@ Monitoring: Simple/cheap vs blind to unknowns; Observability: Deep insight vs da
 - **Hybrid**: Monitoring dashboards + observability traces.[newrelic]
 
 ## Big Tech Blogs & Efficiency Wins
-New Relic: ANZ Bank full lifecycle observability → 80% MTTR reduction; William Hill: P1 incidents <60min.[newrelic] Netflix: Observability cut debugging 70% via traces.[1]
+New Relic: ANZ Bank full lifecycle observability → 80% MTTR reduction; William Hill: P1 incidents &ltg;60min.[newrelic] Netflix: Observability cut debugging 70% via traces.[1]
 
 ## Cheat-Sheet Q&A
 **Q: Core difference?** A: Monitoring reacts (what), observability explains (why).[newrelic]  
