--- a/angular/signals/options.mdx
+++ b/angular/signals/options.mdx
@@ -73,10 +73,10 @@ export class Facade {
 
 ## Important Classes/Interfaces
 
-- **WritableSignal<T>, ReadonlySignal<T>**: Core signal types
-- **computed<T>()**: Derived reactive values
-- **patchSignal()**: Utility for partial state updates
-- **signal<T>(value)**: Writable signal factory
+- `WritableSignal<T>`, `ReadonlySignal<T>`: Core signal types
+- `computed<T>()`: Derived reactive values
+- `patchSignal()`: Utility for partial state updates
+- `signal<T>(value)`: Writable signal factory
 
 ## Design Patterns
 
