--- a/angular/signals/overview.mdx
+++ b/angular/signals/overview.mdx
@@ -61,8 +61,8 @@ flights = toSignal(flights$, {initialValue: []});
 
 ## Important Classes/Interfaces
 
-- **signal<T>(value)**: WritableSignal<T>
-- **computed<T>()**: ReadonlySignal<T> (derived/memoized)
+- **`signal<T>(value)`**: `WritableSignal<T>`
+- **`computed<T>()`**: `ReadonlySignal<T>` (derived/memoized)
 - **effect(fn)**: Side effects, auto-cleanup via DestroyRef
 - **toObservable/signal, toSignal/observable**: RxJS bridge
 
