--- a/rxjs/softchris/higher-order.mdx
+++ b/rxjs/softchris/higher-order.mdx
@@ -89,10 +89,10 @@ A: `--1--2--3--> → --json--json--json-->`
 
 ## Important Terms & Keywords
 
-- **Higher-Order Operator** - Handles Observable<Observable<T>>
+- **Higher-Order Operator** - Handles `Observable<Observable<T>>`
 - **flatMap()** - Flattens nested Observables
 - **switchMap()** - Latest inner Observable only
-- **Metastream** - Observable<Observable<T>>
+- **Metastream** - `Observable<Observable<T>>`
 - **Observable-in-Observable** - Nested stream problem
 - **Cascading Calls** - ID → HTTP → Data
 - **Concurrency Limit** - `flatMap(3)` max parallel
