--- a/work/resume-format.mdx
+++ b/work/resume-format.mdx
@@ -167,9 +167,127 @@ The structure stays the same.
 
 ---
 
-## 📌 Final Verdict
+# ✅ **Best Choice for ATS: 1-Column Layout (Strongly Recommended)**
 
-✔ This structure is **ideal for Principal / Staff roles**
-✔ It highlights **impact before tools**
-✔ It tells a **clear senior-architect story**
+### 🔹 **Use a clean, single-column layout**
 
+This is the **most reliable** format across ATS systems (Workday, Greenhouse, Taleo, Lever, iCIMS).
+
+### ❌ Avoid 2-column layouts
+
+Even though they look good visually, many ATS engines:
+
+* Read columns **out of order**
+* Merge unrelated content
+* Drop or mis-map skills
+
+> At senior levels, clarity beats visual flair.
+
+---
+
+# ✅ **Best Fonts for ATS (Safe & Professional)**
+
+### ✔ Top ATS-Friendly Fonts
+
+Use **one of these only**:
+
+| Font          | Recommendation                     |
+| ------------- | ---------------------------------- |
+| **Calibri**   | ⭐ Best overall (modern + ATS-safe) |
+| **Arial**     | Very safe, slightly dated          |
+| **Helvetica** | Clean, professional                |
+| **Segoe UI**  | Excellent if supported             |
+| **Verdana**   | Very readable, slightly wide       |
+
+### ❌ Fonts to Avoid
+
+* Times New Roman (dated)
+* Roboto (can fail in older ATS)
+* Open Sans (sometimes embedded incorrectly)
+* Any decorative / custom fonts
+
+---
+
+# 📐 **Recommended Font Sizes**
+
+| Element         | Size             |
+| --------------- | ---------------- |
+| Name            | 18–20 pt         |
+| Section headers | 13–14 pt         |
+| Body text       | **10.5–11.5 pt** |
+| Bullet points   | 10.5–11 pt       |
+
+> Keep line spacing around **1.0–1.15** to fit 2 pages cleanly.
+
+---
+
+# 🧱 **Safe Layout Structure (ATS-Proven)**
+
+```
+NAME
+TITLE
+Contact Info
+
+PROFESSIONAL SUMMARY
+
+CAREER HIGHLIGHTS
+
+TECHNICAL SKILLS
+
+WORK EXPERIENCE
+
+EDUCATION
+```
+
+### Layout Rules
+
+* Left-aligned text
+* Standard bullet points (• or -)
+* No text boxes
+* No tables
+* No icons
+* No columns
+* No headers/footers with critical info
+
+---
+
+# 📄 **File Format: Very Important**
+
+### ✔ Best Format
+
+* **PDF (text-based, not scanned)**
+
+### ⚠️ When to Use DOCX
+
+* If the job portal explicitly asks for Word format
+
+> Always test your PDF by copying text — if it pastes cleanly, ATS can read it.
+
+---
+
+# 🧪 **Quick ATS Self-Test (Do This)**
+
+1. Upload resume to a site like Jobscan or ResumeWorded
+2. Or paste into Notepad — check order & readability
+3. Ensure skills appear under a clear “Skills” header
+
+---
+
+# 🎯 Why This Matters More for You
+
+At **Principal / Staff level**:
+
+* Recruiters scan fast
+* ATS still filters first
+* A broken layout can hide **18 years of impact**
+
+---
+
+# 🏆 Final Verdict (Short Answer)
+
+✔ **1-column layout**
+✔ **Calibri (or Arial)**
+✔ **PDF, text-based**
+✔ **Clear section headers**
+
+This combination gives you **maximum ATS hits + senior credibility**.
