--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,61 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "Interview Preparation Guide"
+description: "A structured, AI-assisted guide to prepare effectively for technical and architectural interviews"
 ---
 
-## Setting up
+## Topics
 
-Get your documentation site up and running in minutes.
-
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
-</Card>
-
-## Make it yours
-
-Design a docs site that looks great and empowers your users.
+Explore a wide range of interview topics
 
 <Columns cols={2}>
   <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
+    title="Observability"
+    icon="book-open-cover"
+    href="/observability/overview"
   >
-    Edit your docs locally and preview them in real time.
+    Strategies for frontend and backend applications to ensure reliability and performance
   </Card>
   <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
+    title="Design Patterns"
+    icon="book-open-cover"
+    href="/patterns/overview"
   >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
+    Essential design patterns frequently discussed in senior-level technical and architecture interviews
   </Card>
   <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
+    title="System Design"
+    icon="book-open-cover"
+    href="/system-design/scalability"
   >
-    Auto-generate API documentation from OpenAPI specifications.
+    Core system design concepts and trade-offs commonly evaluated in technical interviews
+  </Card>
+  <Card
+    title="Microservices"
+    icon="book-open-cover"
+    href="/microservices/overview"
+  >
+    Designing and evaluating microservices architectures with real-world trade-offs for interviews
+  </Card>
+  <Card
+    title="Javascript"
+    icon="book-open-cover"
+    href="/javascript/engine"
+  >
+    Core JavaScript concepts and behaviors commonly evaluated in technical interviews
+  </Card>
+  <Card
+    title="Angular"
+    icon="book-open-cover"
+    href="/angular/component/overview"
+  >
+    Advanced Angular topics with emphasis on application architecture, scalability, and maintainability
+  </Card>
+  <Card
+    title="Frontend"
+    icon="book-open-cover"
+    href="/frontend/performance/overview"
+  >
+    Interview-focused frontend concepts covering architecture, performance, and scalability
   </Card>
 </Columns>
 
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
-
-## Need inspiration?
-
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
-</Card>
